Fix icons alignment in control plane version selector

--- a/modules/web/src/assets/css/material/_main.scss
+++ b/modules/web/src/assets/css/material/_main.scss
@@ -360,6 +360,7 @@ mat-form-field {
         display: flex;
 
         .mat-mdc-select-arrow-wrapper {
+          margin-left: 5px;
           margin-right: 10px;
 
           .mat-mdc-select-arrow {
